--- a/PropiedadesTH/appsettings.Development.json
+++ b/PropiedadesTH/appsettings.Development.json
@@ -4,8 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "ConnectionStrings": {
-    "MyDbConnection": "Server=localhost;Port=5432;Database=notesdb;User Id=postgres;Password=*****"
   }
+  //"ConnectionStrings": {
+  //  "MyDbConnection": "Server=localhost;Port=5432;Database=notesdb;User Id=postgres;Password=*****"
+  //}
 }
