--- a/PropiedadesTH/appsettings.json
+++ b/PropiedadesTH/appsettings.json
@@ -22,5 +22,8 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PropiedadesDB": "Server=localhost;Database=PropiedadesDb;Port=5432;User Id=postgres;Password=Inge6254"
+  }
 }
